version 0.99.3 (not yet released)
           * have setup.py check for already installed pyshapelib (just
             like it does for httplib2 and pydap).
           * Basemap will now look for it's data in BASEMAPDATA.
             If that env var not set, it will fall back to it's 
             default location.
           * if readshapefile is called with drawbounds=True, a
             LineCollection object is appended to the returned tuple.
           * make sure drawmapscale method returns a list of objects that
             can be iterated over to remove them from the plot.
           * fillcontinents was returning just last Polygon instance.
             Now returns a list of all Polygon instances.  
           * bluemarble/warpimage:  pass kwargs to imshow, 
             return Image instance.
version 0.99.2 (svn revision 6541)
           * fix drawlsmask method so that it works for cylindrical
             projections with limits outside (-180,180).
           * added 'scale' keyword to bluemarble and warpimage methods to
             downsample image background.
           * Made lat_ts default to 0 for mercator.
           * Now can specify just lon_0 for all cylindrical projections
             (to produce global map centered on lon_0).
           * Added save_background.py example, showing how to re-use
             a map background without redrawing coastlines.
           * Added embedding_map_in_wx.py example (courtesy of
             Mauro Cavalcanti).
           * Added masked array support to shiftgrid function
             (thanks to Jesper Larsen).
           * defer import of netcdf stuff till it is needed (in NetCDFFile
             function).
           * Added McBryde-Thomas Flat Polar Quartic (projection =
             'mbtfpq'), Gall Stereographic Cylindrical (projection =
             'gall') and van der Grinten (projection = 'vandg').
           * fix bugs in warpimage and bluemarble methods for several projections.